--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../About/about.html">
-                <img src="../Images/logo.png" alt="Logo" width="30" height="30">
+            <a class="navbar-brand" href="index.html">
+                <img src="Images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../About/About.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -38,18 +38,18 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Understanding the 12th House/Understanding-the-12th-house.html">Understanding
+                                    href="The 12th House/Understanding the 12th House/Understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Sun in the 12th House/Sun-in-the-12th-house.html">Sun in the
+                                    href="The 12th House/Sun in the 12th House/Sun-in-the-12th-house.html">Sun in the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Moon in the 12th House/Moon-in-the-12th-house.html">Moon in
+                                    href="The 12th House/Moon in the 12th House/Moon-in-the-12th-house.html">Moon in
                                     the 12th House</a>
                             </li>
                         </ul>
@@ -61,29 +61,29 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Sun in the Signs/The-sun-in-the-signs.html">The Sun
+                                    href="General Astrology/The Sun in the Signs/The-sun-in-the-signs.html">The Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Sun in the Houses/The-sun-in-the-houses.html">The Sun
+                                    href="General Astrology/The Sun in the Houses/The-sun-in-the-houses.html">The Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../General Astrology/The Moon in the Signs/The-moon-in-the-signs.html">The
+                                    href="General Astrology/The Moon in the Signs/The-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Research/Research.html">Research</a>
+                        <a class="nav-link" href="Research/Research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Articles/Articles.html">Articles</a>
+                        <a class="nav-link" href="Articles/Articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Readings/Readings.html">Readings</a>
+                        <a class="nav-link" href="Readings/Readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link free-consult" href="../Free Consultation/FreeConsultation.html">FREE
+                        <a class="nav-link free-consult" href="Free Consultation/FreeConsultation.html">FREE
                             CONSULTATION</a>
                     </li>
                 </ul>
