updating active nav links and index.html

--- a/Free Consultation/Do You Have 12th House Planets/do-you-have-12th-house-planets.html
+++ b/Free Consultation/Do You Have 12th House Planets/do-you-have-12th-house-planets.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../../About/about.html">
+            <a class="navbar-brand" href="../../index.html">
                 <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../About/About.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -105,8 +105,8 @@
                     inner corner, and look to see if there are any planets in that "pie slice."</p>
                 <p>Even if you don't have any planets in your twelfth house, you have an astrological sign there,
                     which can tell us a lot about your unconscious tendencies.</p>
-                <a href="https://www.astro.com/cgi/ade.cgi?ract=genchart.cgi&lang=e"
-                    class="btn btn-outline-primary">Check Your Chart</a>
+                <a href="https://www.astro.com/cgi/ade.cgi?ract=genchart.cgi&lang=e" class="btn btn-outline-primary"
+                    target="_blank">Check Your Chart</a>
             </div>
             <div class="birth-chart-details col-lg-7">
                 <div class="example-chart">
