--- a/Readings/Readings.html
+++ b/Readings/Readings.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../Images/logo.png">
+            <a class="navbar-brand" href="../index.html">
                 <img src="../Images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../About/About.html">About</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -80,7 +80,7 @@
                         <a class="nav-link" href="../Articles/Articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Readings/Readings.html">Readings</a>
+                        <a class="nav-link active" href="../Readings/Readings.html">Readings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link free-consult" href="../Free Consultation/FreeConsultation.html">FREE
