--- a/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
+++ b/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="../../About/about.html">
+            <a class="navbar-brand" href="../../index.html">
                 <img src="../../Images/Logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../About/About.html">About</a>
+                        <a class="nav-link" aria-current="page" href="../../index.html">About</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
