--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img srImages/Carousel-lg-1.png" class="carousel-image d-block w-100" alt="Review 1">
+                    <img src="Images/Carousel-lg-1.png" class="carousel-image d-block w-100" alt="Review 1">
                 </div>
                 <div class="carousel-item">
-                    <img srImages/Carousel-lg-2.png" class="d-block w-100" alt="Review 2">
+                    <img src="Images/Carousel-lg-2.png" class="d-block w-100" alt="Review 2">
                 </div>
                 <div class="carousel-item">
-                    <img srImages/Carousel-lg-3.png" class="d-block w-100" alt="Review 3">
+                    <img src="Images/Carousel-lg-3.png" class="d-block w-100" alt="Review 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators4"
