--- a/Readings/Readings.html
+++ b/Readings/Readings.html
@@ -77,7 +77,7 @@
                         <a class="nav-link" href="../Research/Research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../Articles/Articles.html">Articles</a>
+                        <a class="nav-link" href="../Articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="../Readings/Readings.html">Readings</a>
