--- a/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
+++ b/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
@@ -37,18 +37,19 @@
                             The 12th House
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="Understanding-the-12th-house.html">Understanding
+                            <li><a class="dropdown-item" href="understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="../Sun in the 12th House/Sun-in-the-12th-house.html">Sun
+                            <li><a class="dropdown-item"
+                                    href="../Sun in the 12th House/sun-in-the-12th-house.html in the 12th House/Sun-in-the-12th-house.html">Sun
                                     in the
                                     12th House</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../The 12th House/Moon in the 12th House/Moon-in-the-12th-house.html">Moon in
+                                    href="../The 12th House/Moon in the 12th House/moon-in-the-12th-house.html">Moon in
                                     the 12th House</a>
                             </li>
                         </ul>
@@ -60,25 +61,25 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Signs/The-sun-in-the-signs.html">The
+                                    href="../../General Astrology/The Sun in the Signs/the-sun-in-the-signs.html">The
                                     Sun
                                     in the Signs</a></li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Sun in the Houses/The-sun-in-the-houses.html">The
+                                    href="../../General Astrology/The Sun in the Houses/the-sun-in-the-houses.html">The
                                     Sun
                                     in the Houses</a>
                             </li>
                             <li><a class="dropdown-item"
-                                    href="../../General Astrology/The Moon in the Signs/The-moon-in-the-signs.html">The
+                                    href="../../General Astrology/The Moon in the Signs/the-moon-in-the-signs.html">The
                                     Moon in the Signs</a>
                             </li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Research/Research.html">Research</a>
+                        <a class="nav-link" href="../../Research/research.html">Research</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../../Articles/Articles.html">Articles</a>
+                        <a class="nav-link" href="../../Articles/articles.html">Articles</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../../Readings/Readings.html">Readings</a>
