--- a/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
+++ b/The 12th House/Understanding the 12th House/understanding-the-12th-house.html
@@ -19,7 +19,7 @@
     <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="../../index.html">
-                <img src="../../Images/Logo.png" alt="Logo" width="30" height="30">
+                <img src="../../Images/logo.png" alt="Logo" width="30" height="30">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -37,14 +37,14 @@
                             The 12th House
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="understanding-the-12th-house.html">Understanding
+                            <li><a class="dropdown-item"
+                                    href="../Understanding the 12th House/understanding-the-12th-house.html">Understanding
                                     the 12th
                                     House</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item"
-                                    href="../Sun in the 12th House/sun-in-the-12th-house.html in the 12th House/Sun-in-the-12th-house.html">Sun
+                            <li><a class="dropdown-item" href="../Sun in the 12th House/sun-in-the-12th-house.html">Sun
                                     in the
                                     12th House</a>
                             </li>
