--- a/Readings/Zoom Reading/zoom-reading.html
+++ b/Readings/Zoom Reading/zoom-reading.html
@@ -101,19 +101,35 @@
                 <h1>Zoom Reading</h1>
                 <p>You can use the time to discuss your birth chart, get a relationship reading, or a predictive
                     reading.
-                    We can also address a specific question during your reading if you prefer to focus on one topic.</p>
-                <a href="../Purchase/purchase.html" class="btn btn-outline-primary">Buy It Now</a>
+                    We can also address a specific question during your reading if you prefer to focus on one topic. All
+                    purchases are processed through Stripe, a secure third-party payment processing platform.</p>
             </div>
             <div class="birth-chart-details col-lg-7">
                 <h2><strong>1&rpar; 30 Minute Reading</strong></h2>
-                <p>These 30 minutes are for you. Ask any questions you may have and/or get a brief reading. This is a
+                <p>This is a
                     great option if you would like to get a general sense of your birth chart or ask about a specific
                     topic such as your inherent strengths and weaknesses, relationship patterns, or ideal career.</p>
+                <div class="book-button">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
+
+                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XSu03bTlzVE5rD00M0LzS"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
                 <h2><strong>2&rpar; 60 Minute Reading</strong></h2>
                 <p>This is a great option if you have a lot of questions or wish to discuss certain topics in depth. If
                     we meet online, we can cover a lot more ground with your chart as I get to know you better. Feel
                     free to ask questions about particular themes (such as career, relationships, living situation,
                     etc.) or to inquire about specific areas of your chart.</p>
+                <div class="book-button">
+                    <script async src="https://js.stripe.com/v3/buy-button.js">
+                    </script>
+
+                    <stripe-buy-button class="button" buy-button-id="buy_btn_1Q8XTb03bTlzVE5rVMqOgzXG"
+                        publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
+                    </stripe-buy-button>
+                </div>
             </div>
         </div>
     </section>
