articles page and articles 1 and 2

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     </section>
     <section class="container-fluid stay-in-touch">
         <h2>Let's Stay in Touch!</h2>
-        <p>Inquiries about readings, the twelfth house, or other questions<br>about astrology are welcome.</p>
+        <p>Inquiries about readings, the twelfth house, or other questions about astrology are welcome.</p>
         <a href="mailto:twelfthhouseastrologer@gmail.com" class="btn btn-outline-primary">Contact Me</a>
     </section>
     <footer>
