--- a/Free Consultation/FreeConsultation.html
+++ b/Free Consultation/FreeConsultation.html
@@ -96,12 +96,8 @@
             <section class="free-consultation col-lg-5">
                 <h1>Get a FREE 15 Minute Consultation</h1>
                 <p>Not sure where to begin? Let's get to know each other and discuss how I can help you.</p>
-                <script async src="https://js.stripe.com/v3/buy-button.js">
-                </script>
-
-                <stripe-buy-button class="book-button" buy-button-id="buy_btn_1Q8YWV03bTlzVE5rp0Gip285"
-                    publishable-key="pk_live_51Q7k5A03bTlzVE5rmKDTluv0EZ58cMMXYz1j1gINYhvuiN74wZbXGI99ZSKYq0doaISIZoOgJsqbVmHzLXmQ6KFw00TT4h4ztv">
-                </stripe-buy-button>
+                <a href="free consultation form/free-consultation-form.html" class="book-button btn btn-outline-primary"
+                    target="_blank">Book Now</a>
             </section>
 
 
@@ -116,7 +112,7 @@
                     of
                     your
                     chart.</p>
-                <p><em>Is there a particular area in your life, such as your career of relationships, you'd like to
+                <p><em>Is there a particular area in your life, such as your career or relationships, you'd like to
                         address?</em>
                     Would you like to shed some light on self-destructive patterns you feel destined to repeat? Or
                     perhaps
