--- a/Readings/Readings.html
+++ b/Readings/Readings.html
@@ -92,13 +92,13 @@
     </nav>
 
     <section class="I-offer container-fluid">
-        <h1>I Offer Three Different Kinds of Readings</h1>
-        <p>All readings are between 6-9 pages long and are about the<br>topic of your choice.</p>
+        <h1>I Offer Three Kinds of Readings</h1>
+        <p>All readings are between 6-9 pages long and are about the topic of your choice.</p>
     </section>
 
     <section class="flexbox-container container-fluid">
         <div class="reading reading1">
-            <div class="flex-number">1</div>
+            <div class="flex-number number-1">1</div>
             <h2 class="flex-type-of-report">Birth Chart Report</h2>
             <p class="flex-text">A detailed written analysis of your psychological traits, relationship patterns, and
                 career indicators.
@@ -107,7 +107,7 @@
                 More</a>
         </div>
         <div class="reading reading2">
-            <div class="flex-number">2</div>
+            <div class="flex-number number-2">2</div>
             <h2 class="flex-type-of-report">Relationship Report</h2>
             <p class="flex-text">A thorough written analysis of your relationship with a friend, lover, or family
                 member as it evolves over time.
@@ -116,7 +116,7 @@
                 More</a>
         </div>
         <div class="reading reading3">
-            <div class="flex-number">3</div>
+            <div class="flex-number number-3">3</div>
             <h2 class="flex-type-of-report">Predictive Report</h2>
             <p class="flex-text">A detailed written report that forecasts themes of the coming year and how you can
                 prepare for the challenges to come.
