--- a/The 12th House/Sun in the 12th House/sun-in-the-12th-house.html
+++ b/The 12th House/Sun in the 12th House/sun-in-the-12th-house.html
@@ -107,7 +107,7 @@
                 and cursed with the qualities you need to survive this poorly understood house of astrology.</em></p>
         <p>People with Sun in the twelfth house are sensitive, intuitive, and perhaps even psychic. They inhabit a world
             of sensations and impressions that can either be so subtle as to be almost imperceptible, or so overwhelming
-            that they feel lost and confused. They struggle to know ho they are because their sense of identity changes
+            that they feel lost and confused. They struggle to know who they are because their sense of identity changes
             depending on who or what they are around.</p>
         <p>The twelfth house governs what remains when the concerns of the outer world are stripped away. Confinement to
             monasteries, asylums, prisons, and hospitals serves to direct attention away from wordly cares into the
