article and text margins

--- a/The 12th House/Moon in the 12th House/moon-in-the-12th-house.html
+++ b/The 12th House/Moon in the 12th House/moon-in-the-12th-house.html
@@ -283,18 +283,18 @@
         </p>
         <p>Perhaps some of these stories felt familiar to you. Do you think you might have a twelfth house
             moon? Follow the link below to learn more.</p>
-        <p>​<sub>1</sub> <a
+        <p>​<sub>1</sub> <a target="_blank"
                 href="https://www.astro.com/astrology/in_dgtwehouse_e.htm">https://www.astro.com/astrology/in_dgtwehouse_e.htm</a><br>
-            <sub>2</sub> <a
+            <sub>2</sub> <a target="_blank"
                 href="http://www.katybohinc.com/blog/2018/1/31/the-twelfth-house-art-and-the-unconscious">http://www.katybohinc.com/blog/2018/1/31/the-twelfth-house-art-and-the-unconscious</a><br>
-            <sub>3</sub> <a
+            <sub>3</sub> <a target="_blank"
                 href="https://en.wikipedia.org/wiki/Allen_Ginsberg">https://en.wikipedia.org/wiki/Allen_Ginsberg</a><br>
-            <sub>4</sub> <a
+            <sub>4</sub> <a target="_blank"
                 href="https://en.wikipedia.org/wiki/Julian_Assange">https://en.wikipedia.org/wiki/Julian_Assange</a><br>
-            <sub>5</sub> <a
+            <sub>5</sub> <a target="_blank"
                 href="https://en.wikipedia.org/wiki/Arthur_Rimbaud">https://en.wikipedia.org/wiki/Arthur_Rimbaud</a><br>
             <sub>6</sub> <em>Illuminations</em> by Arthur Rimbaud translated by Louise Varese<br>
-            <sub>7</sub> <a
+            <sub>7</sub> <a target="_blank"
                 href="https://en.wikipedia.org/wiki/Emily_Dickinson">https://en.wikipedia.org/wiki/Emily_Dickinson</a><br>
         </p>
     </section>
