--- a/The 12th House/Moon in the 12th House/moon-in-the-12th-house.html
+++ b/The 12th House/Moon in the 12th House/moon-in-the-12th-house.html
@@ -283,7 +283,8 @@
         </p>
         <p>Perhaps some of these stories felt familiar to you. Do you think you might have a twelfth house
             moon? Follow the link below to learn more.</p>
-        <p>​<sub>1</sub> <a target="_blank"
+        <p class="sources">
+            ​<sub>1</sub> <a target="_blank"
                 href="https://www.astro.com/astrology/in_dgtwehouse_e.htm">https://www.astro.com/astrology/in_dgtwehouse_e.htm</a><br>
             <sub>2</sub> <a target="_blank"
                 href="http://www.katybohinc.com/blog/2018/1/31/the-twelfth-house-art-and-the-unconscious">http://www.katybohinc.com/blog/2018/1/31/the-twelfth-house-art-and-the-unconscious</a><br>
